--- a/ansible-basics/assets/inventory.ini
+++ b/ansible-basics/assets/inventory.ini
@@ -1,3 +1,3 @@
-[example-group]
+[example_group]
 this.is.my.host.com
-my-alias some.host.com ansible_port=123
+my-alias ansible_host=some.host.com ansible_port=123
